<?xml version="1.0"?>
<package format="2">
  <name>architecture_3t</name>
  <version>0.1.0</version>
  <description>The architecture_3t package</description>
  <maintainer email="a.khssnv@gmail.com">Alisher A. Khassanov</maintainer>
  <license>BSD</license>
  <author email="a.khssnv@gmail.com">Alisher A. Khassanov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>unique_identifier</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>unique_identifier</exec_depend>

  <export>
  </export>
</package>
